# qtservice

./: .gitignore  CMakeLists.txt  ProjectConfig.cmake.in  qtservice.cpp  qtservice.h  qtservice_unix.cpp  qtservice_win.cpp
